--- a/AccountabilityBuddy/Base.lproj/LaunchScreen.storyboard
+++ b/AccountabilityBuddy/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" image="Accountabilty Buddy" translatesAutoresizingMaskIntoConstraints="NO" id="XHq-eX-WOX">
-                                <rect key="frame" x="-43" y="198" width="500" height="500"/>
+                                <rect key="frame" x="57" y="298" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="QcM-yy-1xD"/>
+                                    <constraint firstAttribute="width" constant="300" id="k9w-N7-Xl0"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
